--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -9,6 +9,10 @@ body {
     font-size: large;
 }
 
+.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td{
+    padding: 3px;
+}
+
 .noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
