--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -22,6 +22,15 @@ body {
     user-select: none;
     cursor: default;
 }
+
+.tt-notice {
+    color: crimson;
+    visibility: hidden;
+    opacity: 0.8;
+    font-size: 80%;
+    padding: 7px;
+}
+
 /*
 .btn-success {
     background-color: #50BF7F;
