--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -89,6 +89,9 @@
             $('label[id=ans'+i+']').attr('onclick','');
         }
     }
+    function notify_incorrect(data){
+        return data['tt_correct'];
+    }
     function on_response(data){
         if (data['tt_correct']) {
             $('#formula-head').css('visibility', 'hidden');
