--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -1,6 +1,6 @@
 {% extends "logic/question_base.html" %}
 
-{% block question_text %}{% if question.is_formula %}נתונה הנוסחה:{% elif question.is_set %}נתונה הקבוצה:{% else %}נתון הטיעון:{% endif %}<p class="text-center formal" style="font-size: 150%; margin-top: -30px;" dir="ltr">{{question.display}}</p>{% endblock %}
+{% block question_text %}{% if question.is_formula %}נתונה הנוסחה:{% elif question.is_set %}נתונה הקבוצה:{% else %}נתון הטיעון:{% endif %}<p class="text-center formal" style="font-size: 150%; margin-top: -30px;color: rgb(24,24,24);" dir="ltr">{{question.display}}</p>{% endblock %}
 {% block question_instruction %}מלא/י את הטבלה ובחר/י את התשובה הנכונה{% endblock %}
 
 {% block question_content %}
