--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -7,6 +7,7 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <p style="white-space: pre-wrap; font-size: 110%;">{% block question_text %}{% endblock %}</p>
+        <div class="page-header" style="margin-top: -18px;"></div>
         <p class="noselect"><b>{% block question_instruction %}{% endblock %}</b></p>
 
         {% block question_content %}
