--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -41,8 +41,7 @@
     <link href="{% static 'logic/css/mycss.css'%}" rel="stylesheet" media="screen">
     <link href="{% static 'logic/css/animate.css'%}" rel="stylesheet" media="screen">
     <!-- Pretty fonts courtesy of Google -->
-    <link href='https://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Trirong" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Trirong|Alef" rel="stylesheet">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap JS -->
