--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -17,7 +17,7 @@
         {% endfor %}
         </tr>
       </thead>
-      <tbody>
+      <tbody class="mono">
       {% for row in truth_table.values %}
         <tr class="text-center">
         {% for value in row %}
