--- a/frege/templates/registration/login.html
+++ b/frege/templates/registration/login.html
@@ -1,24 +1,17 @@
-{% extends "admin/base_site.html" %}
-{% load i18n admin_static %}
+{% extends "logic/basic_base.html" %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/login.css" %}" />
-{{ form.media }}
-{% endblock %}
+{% block title %}כניסה{% endblock %}
 
-{% block bodyclass %}{{ block.super }} login{% endblock %}
+{% block body_content %}
 
-{% block usertools %}{% endblock %}
+<div class="container" style="max-width: 500px;">
+  <div class="page-header"></div>
+  <div class="panel panel-default">
+  <div class="panel-body">
 
-{% block nav-global %}{% endblock %}
-
-{% block content_title %}{% endblock %}
-
-{% block breadcrumbs %}{% endblock %}
-
-{% block content %}
 {% if form.errors and not form.non_field_errors %}
 <p class="errornote">
-{% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
+{% if form.errors.items|length == 1 %}"Please correct the error below."{% else %}"Please correct the errors below."{% endif %}
 </p>
 {% endif %}
 
@@ -30,40 +23,28 @@
 {% endfor %}
 {% endif %}
 
-<div id="content-main">
-
-{% if user.is_authenticated %}
-<p class="errornote">
-את/ה כבר מחובר/ת בתור {{request.user.get_username}}. באפשרותך להתחבר עם משתמש אחר.
-</p>
-{% endif %}
-
-<form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
-  <div class="form-row">
-    {{ form.username.errors }}
-    {{ form.username.label_tag }} {{ form.username }}
-  </div>
-  <div class="form-row">
-    {{ form.password.errors }}
-    {{ form.password.label_tag }} {{ form.password }}
-    <input type="hidden" name="next" value="{{ next }}" />
-  </div>
-  {% url 'admin_password_reset' as password_reset_url %}
-  {% if password_reset_url %}
-  <div class="password-reset-link">
-    <a href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
-  </div>
+  {% if user.is_authenticated %}
+  <p>כבר מחובר!</p>
   {% endif %}
-  <div class="submit-row">
-    <label>&nbsp;</label><input type="submit" class="default" value="{% trans 'Log in' %}" />
+  <form class="form-signin" method="post" id="login-form">{% csrf_token %}
+    <label for="id_username" class="sr-only">שם משתמש/ת</label>
+    <input type="text" id="id_username" name="username" class="form-control" placeholder="שם משתמש/ת" required autofocus
+     oninvalid="this.setCustomValidity('יש להזין שם משתמש/ת')">
+    <label for="id_password" class="sr-only">סיסמה</label>
+    <input type="password" id="id_password" name="password" class="form-control" style="margin-top: 10px;" placeholder="סיסמה" required
+     oninvalid="this.setCustomValidity('יש להזין סיסמה')">
+    <div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 20px; font-size: 130%;">
+        התחברות
+      </button>
+    </div>
+    <input type="hidden" name="next" value="{{ next }}"/>
+  </form>
+  <button class="btn btn-default btn-block" type="submit" style="margin-top: 20px; font-size: 95%;"
+   onclick="location.href='/accounts/register/'">
+    פעם ראשונה? הירשמ/י כאן
+  </button>
   </div>
-</form>
-
-  <div class="submit-row">
-    <label>&nbsp;</label><input type="button" value="פעם ראשונה? הירשמ/י כאן" onclick="location.href='/accounts/register'"/>
   </div>
-<script type="text/javascript">
-document.getElementById('id_username').focus()
-</script>
 </div>
-{% endblock %}
+{% endblock body_content %}
