new registration page and changes in err handing

--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -26,6 +26,12 @@ input:-webkit-autofill {
 .mono {
     font-family: 'Lucida Console', Monaco, monospace;
 }
+
+.errmsg {
+    font-size: 90%;
+    color: crimson;
+}
+
 .noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
