change to a somewhat more elegant about link

--- a/frege/logic/templates/logic/about.html
+++ b/frege/logic/templates/logic/about.html
@@ -11,10 +11,9 @@
     <div class="panel panel-default">
       <div class="panel-body">
 
-        <p>
-  האתר פותח על ידי אלירן חזיזה בקיץ 2016. <br>  
-  את הקוד ניתן למצוא <a href="https://github.com/eliranhaze/frege2">כאן</a>.
-        </p>
+<p>האתר פותח ועוצב על ידי אלירן חזיזה בקיץ 2016 עבור אוניבסיטת תל אביב, והוא פעיל החל משנת הלימודים 2016/2017.</p>
+<p>האתר כתוב בעיקר ב-Python ומשתמש ב-Django ו-Bootstrap.</p>
+<p>את הקוד ניתן למצוא <a href="https://github.com/eliranhaze/frege2">כאן</a>.</p>
 
       </div>
     </div>
