added tooltip to about link

--- a/frege/logic/templates/logic/basic_base.html
+++ b/frege/logic/templates/logic/basic_base.html
@@ -66,8 +66,9 @@
       </div>
 <script>
 $(document).ready(function() {
+    $('[data-toggle="tooltip"]').tooltip(); 
     $("#about").click(function() {
-        $("#about").html('<a class="text-muted" target="_blank" href="https://github.com/eliranhaze/frege2">פותח על ידי אלירן חזיזה</a> עבור אוניברסיטת תל אביב');
+        $("#about").html('<a class="text-muted" data-toggle="tooltip" title="קישור לקוד מקור" target="_blank" href="https://github.com/eliranhaze/frege2">פותח על ידי אלירן חזיזה</a> עבור אוניברסיטת תל אביב');
     });
 });
 </script>
