--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -66,7 +66,13 @@ input:-webkit-autofill {
     font-size: 88%;
     padding-left: 33px;
 }
-
+.dd-btn {
+    font-size: 85%;
+    margin-top: 6px;
+    padding: 0px;
+    height: 35px;
+    width: 45px;
+}
 /*
 .btn-success {
     background-color: #50BF7F;
